<resources>
    <string name="app_name">Songle</string>
    <string name="help">"?"</string>
    <string name="level">Level 2</string>
    <string name="new_song">New Song</string>
    <string name="incomplete_songs">Incomplete songs:</string>
    <string name="incomplete_song">Song</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps_activityerfd">Map</string>
    <string name="instructions">
    Move around the map and collect words by clicking on nearby markers.\n\nMarkers on the map have
        different colours depending on how interesting they are:
        \n\nBoring words - Yellow with no shape\n\nNot boring words - Yellow with a
        circle\n\nInteresting words -
        Orange with a diamond\n\nVery interesting words - Red with a star\n\nYou\'ll
        get points for every marker you collect.
        Collect
        more points for more interesting markers!\n\nEach marker contains a word inside it, use
        these words to guess the song.\n\nPress the guess button, on the map, when you think you\'ve
        got it!\n\nThe more points you get, the higher level you
        will become.
    As you increase your level, the game will become harder.\n\nFor every 1km you walk, you will
        receive a Songle coin.
    You can use your Songle coins to reveal 10 random words on a song of your choice.\n\nSaving:\nTo
        save your progress in a song, simply return to the main menu.
    </string>
    <string name="ok">OK</string>
    <string name="submit">Submit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_blob">blob</string>
    <string name="title_activity_guess_song">Guess the Song!</string>
    <string name="action_settings">Settings</string>
    <string name="congratulations">Congratulations! You guessed the song correctly.</string>
    <string name="congratulations2">You will now return to the main menu where you can
        guess another Song or see your statistics!</string>
    <string name="wrong_answer">Sorry! You got the wrong answer. Please try again.</string>
    <string name="statistics">Statistics</string>
    <string name="walked_one_kilometre">You just walked another 1km!</string>
    <string name="songle_coin">You have been awarded with 1 new Songle coin.\n\nUse this to reveal
        10 random words in a song of your choice!</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="level_up">Well done! You have collected so many markers that
    you\'ve went up a level!\n\nYou are now:</string>
    <string name="close">Close</string>

</resources>
