...
            android:layout_height="3dp"
            android:background="@color/colorAccent"
            android:layout_marginBottom="30dp"
            android:id="@+id/above_edit_text_guess"/>

        <EditText
            android:id="@+id/song_guess_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter your guess here."
            android:layout_marginBottom="30dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" />

        <Button
            android:id="@+id/song_guess_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
...
