...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/startButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/circle_button"
            android:foreground="@drawable/start_button"
            android:onClick="startGame"
            android:elevation="14dp"
...
