...
        android:elevation="4dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:stateListAnimator="@null">

        <Button
            android:id="@+id/help_button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/circle_button"
            android:foreground="@drawable/ic_info_button"
            android:elevation="14dp"
...
